--- a/Agricola/Logistic.BackEnd.API/appsettings.json
+++ b/Agricola/Logistic.BackEnd.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "CnSqlServer": "Server=DESKTOP-F6KG9MM\\SQLEXPRESS;Database=dbLogistica;User Id=sa;Password=1234;TrustServerCertificate=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
