--- a/Agricola/Logistic.BackEnd.API/Logistic.BackEnd.API.csproj
+++ b/Agricola/Logistic.BackEnd.API/Logistic.BackEnd.API.csproj
@@ -8,6 +8,15 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.5" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Logistic.BackEnd.Data\Logistic.BackEnd.Data.csproj" />
   </ItemGroup>
 
 </Project>
