--- a/Agricola/Logistic.BackEnd.API/Logistic.BackEnd.API.csproj
+++ b/Agricola/Logistic.BackEnd.API/Logistic.BackEnd.API.csproj
@@ -12,11 +12,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Logistic.BackEnd.Data\Logistic.BackEnd.Data.csproj" />
+    <ProjectReference Include="..\Logistic.Shared\Logistic.Shared.csproj" />
   </ItemGroup>
 
 </Project>
