--- a/Agricola/Logistic.FrontEnd/Logistic.FrontEnd.csproj
+++ b/Agricola/Logistic.FrontEnd/Logistic.FrontEnd.csproj
@@ -2,15 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Controllers\GenericController.cs" />
+    <Compile Remove="Controllers\GenericController - Copia.cs" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.5" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
