--- a/Agricola/Logistic.FrontEnd/Logistic.FrontEnd.csproj
+++ b/Agricola/Logistic.FrontEnd/Logistic.FrontEnd.csproj
@@ -11,7 +11,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Remove="Views\TipoAlmacen\ListarPDF.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="9.0.5" />
+    <PackageReference Include="Rotativa.AspNetCore" Version="1.4.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
   </ItemGroup>
 
